--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
   "dependencies": {
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
-    "express-validator": "^2.20.5"
+    "multer": "^1.1.0"
   }
 }
