--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "Ongair",
   "license": "GPL-3.0",
   "dependencies": {
+    "aws-sdk": "^2.3.16",
     "body-parser": "^1.15.1",
+    "dynasty": "^0.2.4",
     "express": "^4.13.4",
-    "multer": "^1.1.0"
+    "multer": "^1.1.0",
+    "random-key": "^0.3.2"
   }
 }
