--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,7 @@ jspm_packages
 .node_repl_history
 
 .env
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
