--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Storify your WhatsApp conversations",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "index.js"
   },
   "author": "Ongair",
   "license": "GPL-3.0",
