--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node worker.js"
+    "start": "node index.js"
   },
   "author": "Ongair",
   "license": "GPL-3.0",
