--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "dynasty": "^0.2.4",
     "express": "^4.13.4",
     "multer": "^1.1.0",
-    "random-key": "^0.3.2",
-    "sqs-consumer": "^3.1.3"
+    "random-key": "^0.3.2"
   }
 }
