--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.15.1",
     "dynasty": "^0.2.4",
     "express": "^4.13.4",
+    "material-ui": "^0.15.0",
     "multer": "^1.1.0",
     "random-key": "^0.3.2"
   }
